...
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <!-- Title: Create Event -->
                <TextView
                    android:id="@+id/createEventTitle"
                    style="@style/TextHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_event"
                    android:textColor="@color/textColorPrimary"
                    android:layout_marginStart="@dimen/medium_margin"
...
                    android:layout_marginEnd="@dimen/medium_margin"
                    app:layout_constraintTop_toBottomOf="@id/createEventTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/eventTitleEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/event_title_input_placeholder"
                        android:textColor="@color/textColorPrimary" />
                </com.google.android.material.textfield.TextInputLayout>

...
                            app:boxBackgroundColor="@color/white"
                            app:boxStrokeWidth="0dp"
                            app:boxStrokeWidthFocused="0dp"
                            android:layout_marginEnd="@dimen/small_margin">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/startDateEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/date_hint"
                                android:inputType="none"
                                android:focusable="false"
                                android:clickable="true"
...
                            app:boxCornerRadiusBottomEnd="@dimen/button_corner_radius"
                            app:boxBackgroundColor="@color/white"
                            app:boxStrokeWidth="0dp"
                            app:boxStrokeWidthFocused="0dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/startTimeEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/time_hint"
                                android:inputType="none"
                                android:focusable="false"
                                android:clickable="true"
...
                            app:boxBackgroundColor="@color/white"
                            app:boxStrokeWidth="0dp"
                            app:boxStrokeWidthFocused="0dp"
                            android:layout_marginEnd="@dimen/small_margin">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/endDateEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/date_hint"
                                android:inputType="none"
                                android:focusable="false"
                                android:clickable="true"
...
                            app:boxCornerRadiusBottomEnd="@dimen/button_corner_radius"
                            app:boxBackgroundColor="@color/white"
                            app:boxStrokeWidth="0dp"
                            app:boxStrokeWidthFocused="0dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/endTimeEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/time_hint"
                                android:inputType="none"
                                android:focusable="false"
                                android:clickable="true"
...
                        app:boxCornerRadiusBottomEnd="@dimen/button_corner_radius"
                        app:boxBackgroundColor="@color/white"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/eventDescriptionEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/event_description_hint"
                            android:inputType="textMultiLine"
                            android:minLines="3"
                            android:textColor="@color/textColorPrimary"
...
                android:backgroundTint="@color/white"
                app:cornerRadius="@dimen/button_corner_radius"
                android:layout_marginEnd="@dimen/small_margin" />

            <!-- Save Button -->
            <Button
                android:id="@+id/saveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"
                android:textColor="@color/buttonTextColor"
                android:backgroundTint="@color/buttonPrimary"
...
