...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/event_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:text="PlaceHolder Text"
            android:textColor="@android:color/black"
...
                android:textSize="16sp"
                android:gravity="center"
                android:visibility="invisible"
                android:padding="16dp" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toTopOf="@id/bottom_navbar"
                app:layout_constraintTop_toBottomOf="@id/event_header"
                tools:context=".MapsActivity"
...
