...
                android:gravity="center"
                android:visibility="invisible"
                android:padding="16dp" />

            <!-- Event List -->
            <ListView
                android:id="@+id/eventListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
...
